# polarsgrid

./: .gitignore  README.md  pyproject.toml
.github/workflows/: main.yml  publish.yml
src/polarsgrid/: __init__.py
tests/: test.py  test_grid.py
